<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"

        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp_16"
            tools:context=".fragment.ui.login.AddProductFragment"
            >
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/medium_blue_14_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_6"
                android:text="@string/product_code"
                />
            <EditText
                android:id="@+id/productCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/draw_edit_price"
                android:hint="@string/product_code"
                android:inputType="numberDecimal"
                android:paddingHorizontal="@dimen/dp_8"
                android:paddingVertical="@dimen/dp_16"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/sp_14"
                />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/medium_blue_14_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_6"
                android:text="@string/product_name"
                />
            <EditText
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/draw_edit_price"
                android:hint="@string/product_name"
                android:inputType="text"
                android:paddingHorizontal="@dimen/dp_8"
                android:paddingVertical="@dimen/dp_16"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/sp_14"
                />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/medium_blue_14_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_6"
                android:text="@string/product_price"
                />
            <EditText
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/draw_edit_price"
                android:hint="@string/product_price"
                android:inputType="number"
                android:paddingHorizontal="@dimen/dp_8"
                android:paddingVertical="@dimen/dp_16"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/sp_14"

                />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/medium_blue_14_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_6"
                android:text="@string/product_type"
                />
            <EditText
                android:id="@+id/productType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/draw_edit_price"
                android:hint="@string/product_type"
                android:inputType="text"
                android:paddingHorizontal="@dimen/dp_8"
                android:paddingVertical="@dimen/dp_16"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/sp_14"
                />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/medium_blue_14_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_6"
                android:text="@string/kaha_rkha_hai"
                />
            <EditText
                android:id="@+id/whereIsPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/draw_edit_price"
                android:hint="@string/kaha_rkha_hai"
                android:inputType="text"
                android:paddingHorizontal="@dimen/dp_8"
                android:paddingVertical="@dimen/dp_16"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/sp_14"
                />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/medium_blue_14_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_6"
                android:text="@string/quantity"
                />
            <EditText
                android:id="@+id/productQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/draw_edit_price"
                android:hint="@string/quantity"
                android:inputType="number"
                android:paddingHorizontal="@dimen/dp_8"
                android:paddingVertical="@dimen/dp_16"
                android:selectAllOnFocus="true"
                android:text="@string/_0"
                android:textSize="@dimen/sp_14"
                />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/medium_blue_14_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_6"
                android:text="Update Date And Time: "
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dateAndTime"
                style="@style/medium_16_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_6"
                android:text="Update Date And Time"
                />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/medium_blue_14_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingVertical="@dimen/dp_6"
                android:text="Add Image"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/addImage"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/default_img"
                />

            <Button
                android:id="@+id/productUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_50"
                android:background="@drawable/draw_card_bg"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/padding16"
                android:text="@string/new_update"
                app:layout_constraintVertical_bias="0.2" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</layout>